--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ html{
 #home{
   height: 100vh;
   min-height: 500px;
-  background: url(../images/fondo_2.jpg) no-repeat center;
+  background: url(../images/fondo.jpeg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -128,19 +128,19 @@ html{
 }
 
 #home .content h1::after{
-  content: "Rene A Franco";
+  content: "Hi I'm Rene A Franco";
   animation: textanim 10s linear infinite;
 }
 
 @keyframes textanim{
   25%{
-    content: "A Developer";
+    content: "A Software Engineer";
   }
   50%{
-    content: "A Designer";
+    content: "A Web Developer";
   }
   75%{
-    content: "A Freelancer";
+    content: "A Designer";
   }
 }
 
@@ -287,27 +287,27 @@ section{
 }
 
 .html:after{
-  width: 90%;
+  width: 100%;
 }
 
 .css:after{
-  width: 80%;
+  width: 100%;
 }
 
 .js:after{
-  width: 70%;
+  width: 100%;
 }
 
 .php:after{
-  width: 60%;
+  width: 100%;
 }
 
 .mysql:after{
-  width: 90%;
+  width: 100%;
 }
 
 .cs:after{
-  width: 80%;
+  width: 100%;
 }
 
 section.dark{
@@ -463,7 +463,8 @@ section.dark .section-title::after{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 60px;
+margin-left: auto;
+
 }
 
 .contact-info .item{
@@ -533,6 +534,7 @@ section.dark .section-title::after{
 }
 
 footer{
+
   background: url(../images/bg.jpg) no-repeat center;
   color: #fff;
   padding: 80px 0;
@@ -613,6 +615,7 @@ footer{
 
   .inner-width{
     max-width: 800px;
+
   }
 
   .about-pic{
