update projects with bot feature

--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,8 @@ footer{
   right: 40px;
   width: 40px;
   height: 40px;
+  margin-bottom: 47px;
+  margin-right: -10px;
   background-color: #48dbfb;
   border: none;
   border-radius: 6px;
@@ -671,3 +673,4 @@ footer{
 #trucazo{
   opacity: 0;
 }
+
